--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ for(let i = 1; i <= n; i++){
 	alert(`Изделие: x${i} = ${i}-е изделие`)
 	
 	do{
-		parameter = prompt(`Параметр ${count}-й(в случае ): `);
+		parameter = prompt(`Параметр ${count}-й(вместо , ставьте .): `);
 		listX.push(`${parameter},x${i}`)
 		flag = (parameter) ? true : false;
 		cnt++;
